# drone_turtlebot3_control

./: README.md
aruco_pkg/: CMakeLists.txt  package.xml
aruco_pkg/src/: aruco_pub_node.cpp
drone_actions/: CMakeLists.txt  package.xml
drone_actions/action/: Gimbal.action  StartStopControl.action  TakeoffLanding.action
drone_actions/src/: controller_drone_node.cpp
drone_msgs/: CMakeLists.txt  package.xml
drone_msgs/msg/: DroneTelemetry.msg
drone_pkg/: CMakeLists.txt  package.xml
drone_pkg/include/drone_pkg/: ClientNetwork.h  NetworkServices.h
drone_pkg/src/: drone_client_lc_node.cpp  drone_server_node.cpp
drone_pkg/src/sockets/: ClientNetwork.cpp  NetworkServices.cpp
